--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,14 +1,16 @@
-appdirs==1.4.4
 click==7.1.2
-distlib==0.3.0
-filelock==3.0.12
-Flask==1.0.2
-importlib-metadata==1.6.0
+Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
+joblib==0.15.1
 MarkupSafe==1.1.1
-psycopg2==2.8.5
+numpy==1.18.5
+pandas==1.0.4
+python-dateutil==2.8.1
+pytz==2020.1
+scikit-learn==0.23.1
+scipy==1.4.1
 six==1.15.0
-virtualenv==20.0.21
+sklearn==0.0
+threadpoolctl==2.1.0
 Werkzeug==1.0.1
-zipp==3.1.0
