--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,16 +1,53 @@
+attrs==19.3.0
+awsebcli==3.18.1
+bcrypt==3.1.7
+blessed==1.17.6
+botocore==1.15.49
+cached-property==1.5.1
+cement==2.8.2
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
+cryptography==2.9.2
+docker==4.2.1
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.15.2
 Flask==1.1.2
+future==0.16.0
+idna==2.7
+importlib-metadata==1.6.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jmespath==0.10.0
 joblib==0.15.1
+jsonschema==3.2.0
 MarkupSafe==1.1.1
 numpy==1.18.5
 pandas==1.0.4
-python-dateutil==2.8.1
+paramiko==2.7.1
+pathspec==0.5.9
+pycparser==2.20
+PyNaCl==1.4.0
+pyrsistent==0.16.0
+python-dateutil==2.8.0
 pytz==2020.1
+PyYAML==5.3.1
+requests==2.20.1
 scikit-learn==0.23.1
 scipy==1.4.1
-six==1.15.0
+semantic-version==2.5.0
+six==1.11.0
 sklearn==0.0
+termcolor==1.1.0
+texttable==1.6.2
 threadpoolctl==2.1.0
+urllib3==1.24.3
+wcwidth==0.1.9
+websocket-client==0.57.0
 Werkzeug==1.0.1
+WTForms==2.3.1
+zipp==3.1.0
